sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2: error: not found: value cocktailSort2
		cocktailSort2();
                ^AlgCocktailSort2:2: error: not found: value public
public void cocktailSort2()
^